<resources>
    <string name="app_name">TripGo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="weather">날씨</string>
    <string name="review">리뷰</string>
    <string name="my_page">마이페이지</string>
    <string name="by_popularity">인기순</string>
    <string name="by_date">날짜순</string>
    <string name="address">주소</string>
    <string name="description">상세 설명</string>
    <string name="more_description">내용 더보기 +</string>
    <string name="help_information">문의 및 안내 - 터치 시 전화 연결</string>
    <string name="home_page">홈페이지</string>
    <string name="move_to_home_page">홈페이지로 이동 - 터치 시 이동</string>
    <string name="rating">평점</string>
    <string name="find_road">경로 안내 (카카오 맵으로 이동)</string>
    <string name="move_to_map">MAP으로 이동</string>
    <string name="add_to_calendar">캘린더에 일정 추가하기</string>
    <string name="go_go">고민말GO 여행GO</string>
    <string name="go_search_activity">검색하러 가기</string>
    <string name="chat_bot">chatbot</string>
    <string name="home_family_trip">가족여행</string>
    <string name="home_healing">힐링</string>
    <string name="home_camping">캠핑</string>
    <string name="home_tasty_place">맛집</string>
    <string name="home_top_ten_festival">인기있는 페스티벌 TOP 10</string>
    <string name="home_show_more">+ 더보기</string>
    <string name="home_nearby_attraction">주변에 있는 관광지</string>
    <string name="home_korea_attractions">전국 관광지</string>
    <string name="reviews">후기</string>
    <string name="region">지역</string>
    <string name="gender">성별</string>
    <string name="age">나이</string>
    <string name="companion">동반인</string>
    <string name="review_detail">상세 후기</string>
    <string name="review_writing">리뷰 작성</string>
    <string name="calendar">캘린더</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="generation_10">10대</string>
    <string name="generation_20">20대</string>
    <string name="generation_30">30대</string>
    <string name="generation_40">40대</string>
    <string name="generation_50_over">50대 이상</string>
    <string name="with_whom">누구와 함께 갔나요?</string>
    <string name="family">가족</string>
    <string name="bf_gf">연인</string>
    <string name="friends">친구</string>
    <string name="solo">혼자</string>
    <string name="pet">반려동물</string>
    <string name="submit_visit_review">방문 후기를 남겨주세요</string>
    <string name="review_photo">사진</string>
    <string name="review_cancel">취소</string>
    <string name="review_submit">등록</string>
    <string name="mypage_signin_up">회원가입 / 로그인</string>
    <string name="mypage_signin_up_inpor">로그인을 하고 계획을 세워보세요</string>
    <string name="mypage_review">리뷰</string>
    <string name="mypage_zzim">찜한 목록</string>
    <string name="mypage_question">자주묻는질문</string>
    <string name="mypage_app_inpo">App 정보</string>
    <string name="mypage_open_source_license">오픈소스 라이센스</string>
    <string name="mypage_user_inpor_using_inpo">이용약관 및 개인정보 처리방침</string>
    <string name="mypage_login">로그인</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdrawal">회원탈퇴</string>
    <string name="mypage_dialog_profile_edit">프로필 수정</string>
    <string name="mypage_dialog_user_grade">내 등급</string>
    <string name="mypage_dialog_total_things">총 게시물:</string>
    <string name="mypage_dialog_next_grade_things">다음 등급까지 남은 게시물:</string>
    <string name="favorite_zzim">찜</string>
    <string name="favorite_item_region_name">지역이름</string>
    <string name="favorite_item_region_explantion">지역설명</string>
    <string name="favorite_item_region_distance">지역거리</string>
    <string name="profile_modify">프로필 수정</string>
    <string name="profile_modify_complete">완료</string>
    <string name="profile_modify_nickname">닉네임</string>
    <string name="profile_modify_push_nickname">닉네임을 입력하시오</string>
    <string name="search">검색</string>
    <string name="main_title">메인 타이틀</string>
    <string name="festival_of_the_month">이달의 축제</string>
    <string name="wall">ㅣ</string>
    <string name="sub_title">서브 타이틀</string>
    <string name="date_time">202x.xx.xx ~ 202x.xx.xx</string>
    <string name="travel_destination">여행지</string>
    <string name="attractions">관광 명소</string>
    <string name="sign_up">회원가입</string>
    <string name="email">이메일</string>
    <string name="double_check">중복 확인</string>
    <string name="email_error">이메일 형식이 올바르지 않습니다.</string>
    <string name="nick_name">닉네임</string>
    <string name="nick_name_error">이미 존재하는 닉네임 입니다.</string>
    <string name="password">비밀번호</string>
    <string name="password_error">영문, 숫자, 특수 문자를 포함하여 8~20글자 이어야 합니다.</string>
    <string name="correct_password">비밀번호 확인</string>
    <string name="correct_password_error">비밀번호가 일치하지 않습니다.</string>
    <string name="full_agreement">전체 동의</string>
    <string name="terms_and_conditions_agreement">약관 동의</string>
    <string name="age_limit">만 14세 이상입니다.</string>
    <string name="essential">(필수)</string>
    <string name="select">(선택)</string>
    <string name="terms_of_use">이용약관</string>
    <string name="privacy_policy">개인정보수집 및 이용동의</string>
    <string name="app_alarm">앱 알림 및 이메일 수신</string>
    <string name="essential_agreement">이용약관, 개인정보처리방침에 동의해주세요.</string>
    <string name="sign_up_complete">회원가입 완료 &amp; 이메일 인증하기</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="social_login">소셜 로그인</string>
    <string name="password_find">비밀번호 찾기</string>
    <string name="good_weather">날씨가 좋네요!\n이런 곳은 어떨까요?</string>
    <string name="bad_weather">날씨가 별로예요…\n이런 곳은 어떨까요?</string>
    <string name="temperature_sign">℃</string>
    <string name="load_failed_data">정보를 불러오는데 실패하였습니다.</string>
    <string name="need_permission">권한이 필요합니다.</string>
    <string name="for_load_nearby_place">내 근처 여행지 목록을 불러오기 위해 권한이 필요합니다.</string>
    <string name="agree_permission">동의</string>
    <string name="disagree_permission">취소</string>
    <string name="in_1km">1km 이내</string>
    <string name="in_km">km 이내</string>
    <string name="many_tour_place">곳 이상의 관광지</string>
    <string name="not_logged_in">로그인이 되어 있지 않습니다.</string>
    <string name="no_data">데이터가 없습니다.</string>
    <string name="log_in_and_submit_review">로그인을 하고 일정을 관리하고\n리뷰를 남겨보세요</string>
    <string name="add_schedule_and_submit_review">일정을 추가하고 리뷰를 남겨보세요</string>
    <string name="my_current_schedule">내 최근 일정</string>
    <string name="possible_write_review">리뷰 작성 가능</string>
    <string name="already_write_review">이미 리뷰를 작성 하신 일정입니다.</string>
    <string name="please_write_review_under_100">리뷰 글은 100자 이하로 작성해 주세요</string>
    <string name="my_photos">내 갤러리</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="want_review">리뷰 작성을 하시겠나요?</string>
    <string name="permission_for_gallery">갤러리 접근 권한</string>
    <string name="need_permission_into_gallery">이미지를 가져오기 위해 갤러리 접근 권한이 필요합니다.</string>
    <string name="cant_get_image_to_gallery">사진을 가져오지 못했습니다.</string>
    <string name="how_feel">은 어떠셨나요?\n후기를 남겨주세요!</string>
    <string name="no_detail_info">정보가 없습니다.</string>
    <string name="modfy_review">리뷰 수정</string>
    <string name="want_modify_review">리뷰 수정을 하시겠나요?</string>
    <string name="cant_select_duplicate_schedule">겹치는 일정이 있어 선택할 수 없습니다.</string>
    <string name="please_select_schedule">일정을 선택해주세요</string>
    <string name="save">저장</string>
    <string name="not_login_so_dont_add_schedule">로그인 되어 있지 않아 일정을 추가할 수 없습니다.</string>
    <string name="done_save_schedule">일정 저장이 완료되었습니다.</string>
    <string name="fold_description">접기 -</string>
    <string name="now_loading">불러오는 중…</string>
    <string name="re_log_in">회원 정보 확인이 실패했습니다\n재로그인 해주세요</string>
    <string name="by_distance">거리순</string>
    <string name="like_place">좋아요 </string>
    <string name="not_register_schedule_before_today">오늘 이전 날짜에는 일정을 등록할 수 없습니다.</string>
    <string name="not_writing_review">일정이 없거나 지나지 않은 일정은 리뷰를 적을 수 없습니다.</string>
    <string name="email_duplication">이메일 중복되었습니다. 다시 작성해주세요.</string>
    <string name="loading_route">경로 로딩 중..</string>
    <string name="add_schedule">일정 추가</string>
    <string name="not_login_then_not_submit_like">로그인이 되어 있지 않아 찜 목록에 추가할 수 없습니다.</string>
    <string name="login_en">LOGIN</string>
    <string name="tour_error">행사 정보를 가져 오는데 실패 했습니다.</string>
    <string name="tour_exception_error">행사 정보를 가져 오는 도중 오류가 발생 했습니다.</string>
    <string name="tourist_attractions">%1$s 관광 명소</string>
    <string name="tour_location_error">위치 정보를 불러올 수 없습니다.</string>
    <string name="permission_denide_location">권한 거부됨. 위치를 가져올 수 없습니다.</string>
    <string name="distance_from_my_location">내 위치로 부터 %1$d km</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="modify_schedule">스케줄 수정</string>
    <string name="now_doing_schedule_cant_modify">현재 진행 중인 일정은 \n 수정할 수 없습니다.</string>
    <string name="past_schedule_not_modify">이미 지난 일정은 수정할 수 없습니다.</string>
    <string name="sharing_place">공유하기</string>
    <string name="getting_my_schedule">일정 가져 오는 중…</string>
    <string name="move_to_log_in">로그인 페이지로 이동</string>
    <string name="cannot_delete_review_writted">리뷰를 작성하신 일정은 삭제하실 수 없습니다.</string>
    <string name="delete_schedule">일정 삭제</string>
    <string name="confirm_delete_schedule">일정을 삭제하시겠나요?</string>
    <string name="not_email_verified_then_cant_add_schedule">이메일 인증이 되어 있지 않아 일정을 추가할 수 없습니다.</string>
    <string name="own_car">자차 경로</string>
    <string name="public_transport">대중교통 경로</string>
    <string name="request_location_permission">위치 권한을 요청 합니다.</string>
    <string name="load_location_information">위치 정보를 불러 옵니다.</string>
    <string name="cannot_change_location_settings">위치 설정을 변경할 수 없습니다.</string>
    <string name="no_address_info">주소 정보가 없습니다</string>
    <string name="zero_to_five">0 ~ 5개</string>
    <string name="six_to_ten">6 ~ 10개</string>
    <string name="eleven_to_twelve">11 ~ 20개</string>
    <string name="twelve_more">20 ~ 개</string>
    <string name="somewhere">어딘가</string>
    <string name="badge_of_review_count">리뷰 개수별 뱃지</string>
    <string name="no_review_so_write_review">아직 작성 된 리뷰가 없어요.. \n\n 첫 리뷰를 작성해보세요 :)</string>
    <string name="no_exist_condition_review">조건에 맞는 리뷰가 존재 하지 않습니다.. :)</string>
    <string name="address_title">주소:</string>
    <string name="visited_title">다녀 온 날짜:</string>
    <string name="already_written_review">리뷰 작성 됨</string>
    <string name="to_be_updated_later">위치 정보 업데이트 중…</string>
    <string name="go_to_check">확인 하러가기</string>
    <string name="tripRank">이번주 자주 찾는 여행지 순위</string>
    <string name="default_web_client_id">696047610679-dr938bmucn7iq2rnmul2delrveh52spa.apps.googleusercontent.com</string>
    <string name="my_review">내 리뷰</string>
    <string name="on_gps_for_location_permission">위치 권한을 위해 GPS를 켜주세요</string>
    <string name="no_my_review">작성 된 리뷰가 없습니다.</string>
    <string name="no_my_favorite">좋아요한 여행지가 없습니다.</string>
    <string name="send_feedback_now">피드백을 남겨주세요</string>
    <string name="send_feedback">피드백 남기기</string>
    <string name="your_feedback_is_helpful">여러분의 피드백은 앱 개선에 굉장한 도움이 됩니다!!!</string>
    <string name="feedback_link">"https://forms.gle/bBztzT9xKoZWKTrd8 "</string>
    <string name="out_of_application">나가기</string>
    <string name="appname">고민말GO 트립GO</string>
    <string name="appversion">버전: 1.2</string>
    <string name="developteam">개발자: 스파르타 9 팀</string>
    <string name="minjong_email">alswhddkdl@gmail.com</string>
    <string name="suhyun_email">missu0119@gmail.com</string>
    <string name="jaemin_email">n94n@naver.com</string>
    <string name="sunho_email">sunho@gmail.com</string>
    <string name="sungjin_email">asdsad86642@gmail.com</string>
    <string name="press_back_toast">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="profile_data_not_found">프로필 데이터가 없습니다.\n프로필을 먼저 설정해주세요.</string>
    <string name="new_update">새로운 업데이트</string>
</resources>