<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mypage.reviewwriting.ReviewWritingFragment">

    <LinearLayout
        android:id="@+id/review_writing_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/review_writing_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/icon_back_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/review_writing"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/review_writing_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/icon_home_button" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_writing_action_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/review_writing_gender_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/review_writing_gender_button_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/review_writing_gender_text_view"
                app:layout_constraintTop_toBottomOf="@id/review_writing_gender_text_view"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/review_writing_toggle_man_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/man" />

                <Button
                    android:id="@+id/review_writing_toggle_woman_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/woman" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/review_writing_age_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_gender_button_group" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/review_writing_age_button_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/review_writing_age_text_view"
                app:layout_constraintTop_toBottomOf="@id/review_writing_age_text_view"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/review_writing_toggle_10s_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generation_10"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_20s_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generation_20"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_30s_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generation_30"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_40s_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generation_40"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_50s_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generation_50_over" />


            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/review_writing_companion_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/with_whom"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_age_button_group" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/review_writing_companion_button_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/review_writing_companion_text_view"
                app:layout_constraintTop_toBottomOf="@id/review_writing_companion_text_view"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/review_writing_toggle_family_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/family"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_bf_gf_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bf_gf"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_friends_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friends"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_solo_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/solo"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/review_writing_toggle_pet_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pet"
                    android:textSize="12sp" />


            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/review_writing_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/reviews"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_companion_button_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/review_writing_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/submit_visit_review"
                android:textColorHint="@color/deactivated"
                app:boxStrokeColor="@color/main"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/review_writing_description_text_view"
                app:layout_constraintTop_toBottomOf="@id/review_writing_description_text_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/review_writing_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="4"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/review_writing_image_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/review_photo"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_text_input_layout" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/review_writing_image_button"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/icon_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/review_writing_image_text_view"
                app:layout_constraintTop_toBottomOf="@id/review_writing_image_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/review_writing_rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/rating"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_image_button" />

            <RatingBar
                android:id="@+id/review_writing_rating_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:isIndicator="false"
                android:progressTint="@color/dark_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_rating_text_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/review_writing_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/review_detail_button_round_background"
                android:backgroundTint="@color/deactivated"
                android:text="@string/review_cancel"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/review_writing_submit_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_writing_rating_bar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/review_writing_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/review_detail_button_round_background"
                android:backgroundTint="@color/main"
                android:text="@string/review_submit"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/review_writing_cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/review_writing_cancel_button"
                app:layout_constraintTop_toTopOf="@id/review_writing_cancel_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
