<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tour.TourActivity">

    <TextView
        android:id="@+id/tour_of_the_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/travel_destination"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/by_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tour_of_the_month" />

    <TextView
        android:id="@+id/wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wall"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <TextView
        android:id="@+id/popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_popularity"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/wall"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tour_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tour_of_the_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tour_of_the_month"
        app:srcCompat="@drawable/icon_back_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tour_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:listitem="@layout/tour_recyclerview_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
